# bpy-helper

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
bpy_helper/: camera.py  geometry.py  io.py  light.py  material.py  mesh.py  random.py  scene.py  utils.py
examples/dilightnet-data/: README.md
examples/nrhints-data/: README.md  render_y_up.py  render_z_up.py
