[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "bpy_helper"
version = "0.0.2"
description = "A lightweight alternative to BlenderProc"
readme = "README.md"
authors = [
    { name = "NCJ", email = "me@ncj.wiki" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Graphics :: 3D Rendering"
]
dependencies = [
    "bpy>=3.4.0",
    "numpy"
]

[project.urls]
homepage = "https://github.com/iamNCJ/bpy-helper"
