[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "bpy_helper"
version = "0.0.6"
description = "A lightweight alternative to BlenderProc"
readme = "README.md"
authors = [
    { name = "NCJ", email = "me@ncj.wiki" },
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Graphics :: 3D Rendering"
]
dependencies = [
    "bpy>=3.4.0",
    "numpy"
]

[project.urls]
homepage = "https://github.com/iamNCJ/bpy-helper"
