[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bpy_helper"
version = "0.0.13"
description = "A lightweight alternative to BlenderProc"
readme = "README.md"
authors = [
    { name = "NCJ", email = "me@ncj.wiki" },
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Graphics :: 3D Rendering"
]
requires-python = ">=3.10"
dependencies = [
    "bpy>=3.4.0",
    "numpy"
]

[project.urls]
homepage = "https://github.com/iamNCJ/bpy-helper"
